# QAOA

./: Maxcut_QAOA.ipynb  README.md  __init__.py  algorithms.py  erqaoa.ipynb  qaoa_ideal.ipynb  qaoa_improved.ipynb  rqaoa.ipynb  test_qaoa.py
Code/: README.md  maxcut_qaoa_ideal.py  maxcut_qaoa_pseudocode.md  maxcut_qaoa_simulation.py  maxcut_qaoa_transpile.py  pyproject.toml  qaoa_transpiled.ipynb  requirements.txt  test_qaoa.py
Code/qaoa/: core.py
Code/scripts/: run_erqaoa.py  run_ideal.py  run_rqaoa.py  run_transpiled.py
